# sqlalchemy

./: README.md  pyproject.toml  wip.py
slide_codes/: exemplo_00.py  exemplo_01.py  exemplo_01a.py  exemplo_02.py  exemplo_03.py  exemplo_04.py  exemplo_05.py  exemplo_06.py  exemplo_07.py  exemplo_08.py  exemplo_09.py  exemplo_10.py  exemplo_11.py  exemplo_12.py  exemplo_13.py  exemplo_14.py  exemplo_15.py  exemplo_16.py
