[tool.poetry]
name = "estudo-01"
version = "0.1.0"
description = "primeiro estudo sobre sqlalchemy"
authors = ["thiago-laza <thiago.profmat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
dev = ['mypy', 'blue', 'isort', 'ruff', 'taskipy']

[tool.taskipy.tasks]
lint = 'blue . --check && isort . --check & ruff .'

[tool.isort]
profile = 'black'
line_length = 79
